# solcore5

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  meson.build  meson_options.txt  mypy.ini  postBuild  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devpy/: cmds.py
solcore/: __init__.py  config_tools.py  constants.py  crystals.py  interpolate.py  junction_base.py  light_source_base.py  material_new.py  materials.py  mesh.py  meson.build  parameter.py  property.py  registries.py  science_tracker.py  singleton.py  smooth.py  solar_cell.py  solar_cell_solver.py  solcore_config.txt  source_managed_class.py  state.py  strain_balancing.py  structure.py  structure_new.py  units_system.py
solcore/absorption_calculator/: Custom_CPPB.py  __init__.py  absorption_QW.py  adachi_alpha.py  dielectric_constant_models.py  kramers_kronig.py  nk_db.py  rigorous_coupled_wave.py  sopra_db.py  tmm_core_cpu_parallel.py  tmm_core_gpu_parallel.py  tmm_core_vec.py  transfer_matrix.py
solcore/absorption_calculator/cppm/: Custom_CPPB.py  __init__.py
solcore/absorption_calculator/refractiveindex_info_DB/: __init__.py  dboperations.py
solcore/analytic_solar_cells/: IV.py  QE.py  __init__.py  depletion_approximation.py  detailed_balance.py  diode_equation.py  tunnel_junctions.py
solcore/data/: Colours.txt  Custom_CPPB_MaterialParamaters.txt  calculable_parameters.txt
solcore/data/SOPRA_DB/: 7059.MAT  ALAS552T.MAT  ALSB.MAT  ASI.MAT  GAAS415T.MAT  INAS.MAT  INSBOX.MAT  IR3SI5P.MAT  NI.MAT
solcore/data_analysis_tools/: ellipsometry_analysis.py
solcore/documentation/SphinxDocs/: make.bat
solcore/examples/: AlInP_nk.csv  Figure14.py  Figure3.py  Figure8.py  Figure9.py  Palik_GaAs_Eps1.csv
solcore/examples/AC_examples/: AC_example_1.py  AC_example_2.py  AC_example_3.py  SOPRA_DB_example.py
solcore/examples/ASC_examples/: ASC_example_1.py  ASC_example_2.py  ASC_example_3.py  ASC_example_4.py
solcore/examples/PDD_examples/: PDD_example_1.py  PDD_example_2.py  PDD_example_3.py  PDD_example_4.py  PDD_example_5.py
solcore/examples/QM_examples/: QM_example_1.py  QM_example_2.py  QM_example_3.py
solcore/examples/graphing_examples/: Custom_Colours_Example1.py
solcore/future/: constants.py  junction_base.py  material.py  mesh.py  parameter.py
solcore/future/junctions/: da_junction.py  two_diode_junction.py
solcore/future/light_source/: astmg173.csv  light_source_base.py  standard_source.py
solcore/future/material_data/: adachi1987_simple_param.json  levinshtein2001_simple_param.json  sotoodehJAP2000_mobility.json  vurgaftmanJAP2001_simple_param.json
solcore/future/parameter_sources/: __init__.py  builtin_nk.py  calculable_parameters.py  mobility_parameters.py  refractiveindex_info_nk.py  simple_parameters.py  sopra_nk.py
solcore/graphing/: Colours.txt  Custom_Colours.py  __init__.py  graph.py  graph_lines.py  graph_support.py
solcore/junctions/: da_junction.py  two_diode_junction.py
solcore/junctions/pdd_junction/: pdd_junction.py
solcore/light_source/: SPCTRAL_si_units.txt  __init__.py  light_source.py  light_source_base.py  smarts.py  spectral2.py  standard_source.py
solcore/material_data/: __init__.py  adachi.toml  built_in_nk.py  levinshtein.toml  mobility.py  mobility_parameters.json  nk_database.py  refractiveindex_db.py  refractiveindex_info.py  sopra_db.py  sotoodehJAP2000_mobility.json  vurgaftman.toml  vurgaftmanJAP2001_simple_param.json
solcore/material_data/Adachi/: binaries.txt
solcore/material_data/AlInP-Material/: __init__.py
solcore/material_data/Custom/: parameters.txt
solcore/material_data/GaAsP-Material/: __init__.py
solcore/material_data/GaInP-Material/: __init__.py
solcore/material_data/GaSb-Material/: k.txt
solcore/material_data/Ge/: Ge.txt
solcore/material_data/Ge-Material/: k.txt  n.txt
solcore/material_data/InGaAs-Material/: 000_InGaAs.txt  010_InGaAs.txt  024_InGaAs.txt  035_InGaAs.txt  053_InGaAs.txt  075_InGaAs.txt  100_InGaAs.txt  InGaAs_comp copy.txt  test.py
solcore/material_data/InP-Material/: info.txt  k.txt  n.txt
solcore/material_data/InSb-Material/: k.txt
solcore/material_system/: __init__.py  create_new_material.py  critical_point_interpolate.py  critical_point_picker.py  material_system.py
solcore/materials/: __init__.py  create_new_material.py  critical_point_interpolate.py  critical_point_picker.py  material_system.py  mobility.py  parameter_system.py
solcore/optics/: __init__.py  beer_lambert.py  external_optics.py  optics_utilities.py  rcwa.py  tmm.py
solcore/optimization/: __init__.py  differential_evolution.py
solcore/parameter_sources/: __init__.py  calculable_parameters.py  mobility_parameters.py
solcore/parameter_system/: __init__.py  calculable_parameters.py  calculable_parameters.txt  parameter_system.py  simple_parameters.py
solcore/poisson_drift_diffusion/: DDmodel-current.f95  DeviceStructure.py  DriftDiffusionUtilities.py  Illumination.py  QWunit.py  __init__.py  driftdiffusion_compiler.py  meson.build
solcore/quantum_mechanics/: __init__.py  graphics.py  heterostructure_alignment.py  high_level_kp_QW.py  kp_QW.py  kp_bulk.py  potential_utilities.py  strain.py  structure_utilities.py
solcore/sesame_drift_diffusion/: __init__.py  process_structure.py  solve_pdd.py
solcore/spice/: __init__.py  pv_module_solver.py  quasi_3D_solver.py  spice.py
solcore/strain_balancing/: __init__.py
solcore/sunglass/: __init__.py  log.py  materials.py  plot.py  properties_and_settings.py  run_calculation.py  run_sunglass.py  save_data.py  solar_cells.py  spectrum.py  sunglass.py
solcore/tests/: Ge-Palik.csv  SiGeSn_k.txt  alinp.csv  conftest.py  test_QM.py  test_absorption.py  test_analytic_solar_cells.py  test_basics.py  test_dielectric_constant.py  test_light_source.py  test_pdd.py  test_poisson_drift_diffusion.py  test_qm.py  test_state.py
solcore/units_system/: Default_units.txt  __init__.py  units_system.py
(+1205 files in other folders)
