[bumpversion]
current_version = 5.7.5
commit = True
tag = True

[metadata]
description-file = README.md

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=solcore --cov-report=html:htmlcov -p no:warnings -n "auto" -v

[bumpversion:file:solcore/solcore_config.txt]

[bumpversion:file:docs/source/conf.py]
