[bumpversion]
current_version = 5.8.0
commit = True
tag = True

[metadata]
description-file = README.md

[aliases]
test = pytest

[flake8]
max-line-length = 88

[tool:pytest]
addopts = --cov=solcore --cov-report=html:htmlcov -p no:warnings -n "auto" -v

[bumpversion:file:solcore/solcore_config.txt]

[bumpversion:file:docs/source/conf.py]
