[bumpversion]
current_version = 5.8.1
commit = True
tag = True

[metadata]
description-file = README.md

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=solcore --cov-report=html:htmlcov -p no:warnings -n "auto" -v

[bumpversion:file:solcore/solcore_config.txt]

[bumpversion:file:docs/source/conf.py]

[flake8]
max-line-length = 88
exclude = .venv/
extend-ignore = 
	E203,

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true